[gd_scene load_steps=7 format=3 uid="uid://cchnc2wed5tb6"]

[ext_resource type="Script" uid="uid://ccjmheubek61d" path="res://assets/scripts/player.gd" id="1_fksrs"]
[ext_resource type="PackedScene" uid="uid://c4pi8242nxsjo" path="res://assets/assetScenes/color_capsule.tscn" id="2_rsc3f"]
[ext_resource type="PackedScene" uid="uid://b61v28r3xthw3" path="res://assets/assetScenes/spear.tscn" id="3_6xwpp"]
[ext_resource type="PackedScene" uid="uid://coeqc7qdlukfr" path="res://assets/assetScenes/claw_slash.tscn" id="3_dniid"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fksrs"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsc3f"]
size = Vector2(40, 80)

[node name="Player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 65
physics_material_override = SubResource("PhysicsMaterial_fksrs")
gravity_scale = 3.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_fksrs")

[node name="PhysicsCol" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rsc3f")

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="triggerCol" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="Collider" type="CollisionShape2D" parent="triggerCol"]
shape = SubResource("RectangleShape2D_rsc3f")

[node name="render" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ColorCapsule" parent="render" instance=ExtResource("2_rsc3f")]
layout_mode = 0
color = Color(0, 0.7666669, 1, 1)
radius = 20.0
height = 80.0

[node name="ColorRect" type="ColorRect" parent="render"]
layout_mode = 0
offset_left = 13.0
offset_top = -31.0
offset_right = 27.0
offset_bottom = -18.0

[node name="ColorRect2" type="ColorRect" parent="render"]
layout_mode = 0
offset_left = 18.0
offset_top = -29.0
offset_right = 26.0
offset_bottom = -20.0
color = Color(0, 0, 0, 1)

[node name="spear" parent="." instance=ExtResource("3_6xwpp")]
visible = false

[node name="clawSlash" parent="." instance=ExtResource("3_dniid")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="area_entered" from="triggerCol" to="." method="_on_trigger_col_area_entered"]
[connection signal="area_exited" from="triggerCol" to="." method="_on_trigger_col_area_exited"]
